--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemMovie"
@@ -45,3 +46,4 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoto"
         app:layout_constraintEnd_toEndOf="@+id/imageViewPhoto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
