--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageViewPhoto" />
 
     <TextView
-        android:id="@+id/textViewRating"
+        android:id="@+id/tvRanking"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
